dashboard/buttons: making buttons wrap and expand correctly on mobile

--- a/meinberlin/assets/scss/components/_lr_bar.scss
+++ b/meinberlin/assets/scss/components/_lr_bar.scss
@@ -20,21 +20,6 @@
     }
 }
 
-.lr-bar__sm-left-lg-right {
-    float: left;
-    min-width: 100%;
-    margin-top: 0.5 * $em-spacer;
-
-    > * {
-        display: inline-block;
-    }
-
-    @media screen and (min-width: $breakpoint) {
-        float: right;
-        min-width: auto;
-    }
-}
-
 .lr-bar--with-margin {
     margin-top: 1.5 * $em-spacer;
     margin-bottom: 0.5 * $em-spacer;
@@ -55,5 +40,23 @@
 
     &.nowrap {
         flex-wrap: unset;
+    }
+}
+
+.lr-bar__actions {
+    flex-direction: column;
+
+    & > a {
+        margin: 0.5*$spacer 0;
+    }
+
+    @media (min-width: 30em) {
+        justify-content: flex-end;
+        flex-direction: row;
+
+        & > a {
+            margin: 0.5*$spacer 0;
+            margin-left: 0.5*$spacer;
+        }
     }
 }
